--- a/about-me/index.html
+++ b/about-me/index.html
@@ -363,7 +363,7 @@ if (!doNotTrack) {
 
 
 
-        <span>Excellence Research Programme</span>
+        <span>CC BY-NC-ND</span>
     </section>
     </footer>
 
