--- a/links/index.html
+++ b/links/index.html
@@ -344,7 +344,7 @@ if (!doNotTrack) {
 
 
 
-        <span>According to the IEEE Copyright Agreement, authors can post accepted versions on their personal servers with IEEE copyright highlighted.</span>
+        <span>CC BY-NC-ND</span>
     </section>
     </footer>
 
