--- a/excellence-research/index.html
+++ b/excellence-research/index.html
@@ -345,11 +345,12 @@ if (!doNotTrack) {
     
     
     <p>It is generally challenging for most researchers to make a direct value and contribution to human society, even though we are usually assumed to be doing that in the eyes of non-researchers. I also often do work that does not seem very significant, such as enhancing the work of others by a small step. This is quite normal because we can&rsquo;t always make a considerable contribution.</p>
-<p>There is no so-called excellent research in the world, which is a false proposition for anyone, whether for a beginner or a Nobel Prize winner in their field. But I always imagine that if I have one perfect research, at least during my PhD, I think it will be excellent, which can contribute to human society and not be affected by any factor. It may seem not easy, but it is our primary responsibility in the eyes of non-researchers. At the same time, I think doing anything with a pure attitude is popular but challenging in any industry and field. Through this project, I hope to do at least one remarkable but ordinary research that looks like a performance art for me personally, which is the original motivation for setting up this project.</p>
-<p>5th September 2022 in Hartree Library, University of Southampton, UK.</p>
-<p>Learn more and contribute on [Not available].</p>
+<p>There is no so-called excellent research in the world, which is a false proposition for anyone, whether for a beginner or a Nobel Prize winner in their field. But I always imagine that if I have one perfect research, at least during my PhD, I think it will be excellent, which can contribute to human society and not be affected by any factor. It may seem not easy, but it is our primary responsibility in the eyes of non-researchers. At the same time, I think doing anything with a pure attitude is popular but challenging in any industry and field. Through this project, I expect to do at least one impressive piece of research that might be remarkable, which is the original motivation for setting up this project..</p>
+<p>In Hartley Library, University of Southampton, UK.</p>
+<p>5th September 2022.</p>
 <blockquote>
-<p>(I am now actively seeking many views from scholars worldwide on a wide range of topics and will publish it at the appropriate time. You are welcome to contribute to this in any way possible, and all contributions and name will be permanently stored on my website when summarized.)</p>
+<p>Learn more and contribute on [Not available].
+(I am now actively seeking many views from scholars worldwide on a wide range of topics and will publish it at the appropriate time. You are welcome to contribute to this in any way possible, and all contributions and name will be permanently stored on my website when summarized.)</p>
 </blockquote>
 
 </section>
