--- a/about-me/index.html
+++ b/about-me/index.html
@@ -331,7 +331,7 @@ if (!doNotTrack) {
     <section class="article-content">
     
     
-    <p>I am currently pursuing my postgraduate research at the University of Southampton&rsquo;s <a class="link" href="https://www.ecs.soton.ac.uk/"  target="_blank" rel="noopener"
+    <p>I recently finished my postgraduate research at the University of Southampton&rsquo;s <a class="link" href="https://www.ecs.soton.ac.uk/"  target="_blank" rel="noopener"
     >School of Electronics and Computer Science(ECS)</a>, which is <a class="link" href="https://www.theguardian.com/education/ng-interactive/2021/sep/11/the-best-uk-universities-2022-rankings"  target="_blank" rel="noopener"
     >1st in the UK for Electrical and Electronic Engineering</a>. My supervisor is <a class="link" href="https://scholar.google.co.uk/citations?user=2PifIaUAAAAJ&amp;hl=en"  target="_blank" rel="noopener"
     >Dr. Basel Halak</a>. He is Associate Professor and the director of the <a class="link" href="https://www.c-iot.ecs.soton.ac.uk/"  target="_blank" rel="noopener"
