--- a/about-me/index.html
+++ b/about-me/index.html
@@ -339,7 +339,7 @@ if (!doNotTrack) {
 <p>I think the world will need more IoT-based smart devices in the future, and they may be constrained by power consumption and size. And security will be the biggest issue for such devices in the background of the technology that has been fully developed.</p>
 <p>My research interests include including:</p>
 <ul>
-<li>IoT and Hardware Security</li>
+<li>Security in IoT and AI</li>
 <li>Embedded and Wearable Device</li>
 <li>Digital System Design Using FPGA</li>
 </ul>
