--- a/about-me/index.html
+++ b/about-me/index.html
@@ -339,9 +339,9 @@ if (!doNotTrack) {
 <p>I think the world will need more IoT-based smart devices in the future, and they may be constrained by power consumption and size. And security will be the biggest issue for such devices in the background of the technology that has been fully developed.</p>
 <p>My research interests include including:</p>
 <ul>
-<li>Security in IoT and AI</li>
-<li>Embedded and Wearable Device</li>
-<li>Digital System Design Using FPGA</li>
+<li>AIoT security</li>
+<li>Digital System Design with FPGA</li>
+<li>Wearable Medical Devices</li>
 </ul>
 <p>Beyond the basic research programme, I also proposed the Excellence Research Programme when I was still studying for my Master in Southampton and planning to do my PhD, which aimed to complete an absolutely leading excellence research over four years and publish it in a high-level journal, it might consist of several supportive top conferences. Scholars from around the world are welcome to contribute to this programme.</p>
 <p>Learn more and contribute on <a class="link" href="https://www.ranzhuoheng.com/excellence-research/"  target="_blank" rel="noopener"
