--- a/my-paper-has-been-presented-at-the-2023-ieee-iccrd-conference/index.html
+++ b/my-paper-has-been-presented-at-the-2023-ieee-iccrd-conference/index.html
@@ -20,6 +20,8 @@ Abstract: Electrocardiography (ECG) and pacemakers are two typical approaches fo
 Title: Medical Hardware for Stimulation and Metrology of the Heart: Electrocardiogram and Pacemaker
 Abstract: Electrocardiography (ECG) and pacemakers are two typical approaches for the evaluation and intervention of the mechanical and electrical activity of the heart. In this paper, we first analyzed the physiological processes of cardiac activity and then gave an exhaustive review of the multiple existing clinical and industrial applications."><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://www.ranzhuoheng.com/my-paper-has-been-presented-at-the-2023-ieee-iccrd-conference/IEEE.jpg' />
+    <link rel="shortcut icon" href="/favicon.ico" />
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6F9YGRN9K"></script>
 <script>
 var doNotTrack = false;
@@ -406,7 +408,7 @@ if (!doNotTrack) {
 
 
 
-        <span>According to the IEEE Copyright Agreement, authors can post accepted versions on their personal servers with IEEE copyright highlighted.</span>
+        <span><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted -->This work is licensed under a <!-- raw HTML omitted -->Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License<!-- raw HTML omitted -->.</span>
     </section>
     </footer>
 
