--- a/search/index.html
+++ b/search/index.html
@@ -13,6 +13,8 @@
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="Search">
 <meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://www.ranzhuoheng.com/search/index.json">
+    <link rel="shortcut icon" href="/favicon.ico" />
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6F9YGRN9K"></script>
 <script>
 var doNotTrack = false;
