--- a/about-me/index.html
+++ b/about-me/index.html
@@ -13,6 +13,8 @@
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="About Me">
 <meta name="twitter:description" content="Me and Future World">
+    <link rel="shortcut icon" href="/favicon.ico" />
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6F9YGRN9K"></script>
 <script>
 var doNotTrack = false;
@@ -363,7 +365,7 @@ if (!doNotTrack) {
 
 
 
-        <span>CC BY-NC-ND</span>
+        <span><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted -->This content is licensed under a <!-- raw HTML omitted -->Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License<!-- raw HTML omitted -->.</span>
     </section>
     </footer>
 
