--- a/my-paper-has-been-presented-at-the-2022-ieee-asid-conference/index.html
+++ b/my-paper-has-been-presented-at-the-2022-ieee-asid-conference/index.html
@@ -17,6 +17,8 @@ Title: Performance and Security Enhancement Solutions for Positron Emission Tomo
 <meta name="twitter:description" content="I would like to thank those who have contributed to this work. This work is an arduous and brave combination for me since medicine is not my specialized field, so I have to investigate more. The biomedical engineering field is still a great challenge for me, but I hope it would be good proof and inspire my research in other cross-cutting and multi-field research.
 Title: Performance and Security Enhancement Solutions for Positron Emission Tomography Medical Hardware"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://www.ranzhuoheng.com/my-paper-has-been-presented-at-the-2022-ieee-asid-conference/IEEE.jpg' />
+    <link rel="shortcut icon" href="/favicon.ico" />
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6F9YGRN9K"></script>
 <script>
 var doNotTrack = false;
@@ -403,7 +405,7 @@ if (!doNotTrack) {
 
 
 
-        <span>According to the IEEE Copyright Agreement, authors can post accepted versions on their personal servers with IEEE copyright highlighted.</span>
+        <span><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted -->This work is licensed under a <!-- raw HTML omitted -->Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License<!-- raw HTML omitted -->.</span>
     </section>
     </footer>
 
