--- a/my-paper-has-been-presented-at-the-2022-ieee-icsai-conference/index.html
+++ b/my-paper-has-been-presented-at-the-2022-ieee-icsai-conference/index.html
@@ -20,6 +20,8 @@ Abstract: Millions of blindness and visual impairment cases are caused by damage
 Title: Hardware Strategies in Medical Systems for Visually Impaired Treatment
 Abstract: Millions of blindness and visual impairment cases are caused by damage to the loss of photoreceptor function."><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://www.ranzhuoheng.com/my-paper-has-been-presented-at-the-2022-ieee-icsai-conference/IEEE.jpg' />
+    <link rel="shortcut icon" href="/favicon.ico" />
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6F9YGRN9K"></script>
 <script>
 var doNotTrack = false;
@@ -404,7 +406,7 @@ if (!doNotTrack) {
 
 
 
-        <span>According to the IEEE Copyright Agreement, authors can post accepted versions on their personal servers with IEEE copyright highlighted.</span>
+        <span><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted -->This work is licensed under a <!-- raw HTML omitted -->Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License<!-- raw HTML omitted -->.</span>
     </section>
     </footer>
 
