--- a/my-paper-is-under-review-by-ieee-access/index.html
+++ b/my-paper-is-under-review-by-ieee-access/index.html
@@ -20,6 +20,8 @@ More information and documents: Available'>
 I am working with my supervisor, Dr. Basel Halak, on the publication of my dissertation, and I will provide real-time updates on our progress for those following this work.
 More information and documents: Available"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://www.ranzhuoheng.com/my-paper-is-under-review-by-ieee-access/IEEE.jpg' />
+    <link rel="shortcut icon" href="/favicon.ico" />
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6F9YGRN9K"></script>
 <script>
 var doNotTrack = false;
@@ -406,7 +408,7 @@ if (!doNotTrack) {
 
 
 
-        <span>According to the IEEE Copyright Agreement, authors can post accepted versions on their personal servers with IEEE copyright highlighted.</span>
+        <span><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted -->This work is licensed under a <!-- raw HTML omitted -->Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License<!-- raw HTML omitted -->.</span>
     </section>
     </footer>
 
