--- a/outcomes-and-dissertation-bachelor/index.html
+++ b/outcomes-and-dissertation-bachelor/index.html
@@ -17,6 +17,8 @@ My mentor is Huiquan Wang in my dissertation. He is the Associate Dean of the Fa
 <meta name="twitter:description" content="Some of my outcomes and dissertation are here at the Bachelor.
 My mentor is Huiquan Wang in my dissertation. He is the Associate Dean of the Faculty of Life Sciences in Tiangong University. This work was awarded the &amp;ldquo;Outstanding Final Destination Project of Tiangong University&amp;rdquo; because of its rich content (140 pages) and interesting practical work. My earliest papers date back to when I was a second-year at my Bachelor’s university."><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://www.ranzhuoheng.com/outcomes-and-dissertation-bachelor/University.jpg' />
+    <link rel="shortcut icon" href="/favicon.ico" />
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6F9YGRN9K"></script>
 <script>
 var doNotTrack = false;
@@ -401,7 +403,7 @@ if (!doNotTrack) {
 
 
 
-        <span>According to the IEEE Copyright Agreement, authors can post accepted versions on their personal servers with IEEE copyright highlighted.</span>
+        <span><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted -->This work is licensed under a <!-- raw HTML omitted -->Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License<!-- raw HTML omitted -->.</span>
     </section>
     </footer>
 
