--- a/about-me/index.html
+++ b/about-me/index.html
@@ -346,7 +346,7 @@ if (!doNotTrack) {
     <section class="article-content">
     
     
-    <p>I am recently going to Hong Kong as a full-time research assistant and then registered as a full-time PhD student at <a class="link" href="https://www.cityu.edu.hk/"  target="_blank" rel="noopener"
+    <p>II am recently going to Hong Kong as a full-time research assistant and then registered as a full-time PhD student at <a class="link" href="https://www.cityu.edu.hk/"  target="_blank" rel="noopener"
     >City University of Hong Kong</a> which starting from 1 September. My postgraduate research has ended in 2022 at the <a class="link" href="https://www.ecs.soton.ac.uk/"  target="_blank" rel="noopener"
     >School of Electronics and Computer Science(ECS)</a> of the University of Southampton, which is a leading academic institution and is ranked <a class="link" href="https://www.theguardian.com/education/ng-interactive/2021/sep/11/the-best-uk-universities-2022-rankings"  target="_blank" rel="noopener"
     >1st in the UK for Electrical and Electronic Engineering</a>. Before that, I graduated with a Bachelor of Engineering (B.Eng.) degree from <a class="link" href="https://en.tiangong.edu.cn/main.htm"  target="_blank" rel="noopener"
